[package]
name = "indracore-rpc"
version = "0.4.0-dev"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
jsonrpc-core = "15.1.0"
indracore-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-blockchain = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-keystore = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-runtime = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-api = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-consensus = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-consensus-babe = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-chain-spec = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-rpc = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-consensus-babe = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-consensus-babe-rpc = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-consensus-epochs = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-finality-grandpa = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-finality-grandpa-rpc = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-keystore = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-sync-state-rpc = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
pallet-transaction-payment-rpc = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
parity-scale-codec = { version = "2.0.0", default-features = false }
sp-block-builder = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
pallet-contracts-rpc = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }