[package]
name = "indracore-service"
version = "0.2.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
# Substrate Client
sc-authority-discovery = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
babe = { package = "sc-consensus-babe", git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-block-builder = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-chain-spec = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-client-api = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-client-db = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-consensus = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-consensus-slots = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-executor = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-finality-grandpa-warp-sync = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", optional = true }
sc-network = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-transaction-pool = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-keystore = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
service = { package = "sc-service", git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }
telemetry = { package = "sc-telemetry", git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }

# Substrate Primitives
sp-authority-discovery = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
consensus_common = { package = "sp-consensus", git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
inherents = { package = "sp-inherents", git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-api = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-block-builder = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-blockchain = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-core = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-io = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-keystore = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-runtime = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-session = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-storage = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-transaction-pool = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-trie = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-state-machine = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }

# Substrate Pallets
pallet-babe = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
pallet-im-online = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
pallet-staking = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
pallet-contracts = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }

# Substrate Other
frame-benchmarking = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
frame-system-rpc-runtime-api = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }

# External Crates
futures = "0.3.12"
hex-literal = "0.3.1"
tracing = "0.1.22"
tracing-futures = "0.2.4"
serde = { version = "1.0.123", features = ["derive"] }
thiserror = "1.0.23"
serde_json = "1.0.64"

# Indracore
indracore-node-core-proposer = { path = "../core/proposer" }
indracore-overseer = { path = "../overseer" }
indracore-parachain = { path = "../../parachain" }
indracore-primitives = { path = "../../primitives" }
indracore-rpc = { path = "../../rpc" }
indracore-subsystem = { package = "indracore-node-subsystem", path = "../subsystem" }
indracore-node-subsystem-util = { path = "../subsystem-util" }
indracore-runtime-parachains = { path = "../../runtime/parachains" }

# Indracore Runtimes
indracore-runtime = { path = "../../runtime/indracore" }
kumandra-runtime = { path = "../../runtime/kumandra" }

# Indracore Subsystems
indracore-availability-bitfield-distribution = { path = "../network/bitfield-distribution", optional = true }
indracore-availability-distribution = { path = "../network/availability-distribution", optional = true }
indracore-availability-recovery = { path = "../network/availability-recovery", optional = true }
indracore-collator-protocol = { path = "../network/collator-protocol", optional = true }
indracore-network-bridge = { path = "../network/bridge", optional = true }
indracore-node-collation-generation = { path = "../collation-generation", optional = true }
indracore-node-core-av-store = { path = "../core/av-store", optional = true }
indracore-node-core-backing = { path = "../core/backing", optional = true }
indracore-node-core-bitfield-signing = { path = "../core/bitfield-signing", optional = true }
indracore-node-core-candidate-selection = { path = "../core/candidate-selection", optional = true }
indracore-node-core-candidate-validation = { path = "../core/candidate-validation", optional = true }
indracore-node-core-chain-api = { path = "../core/chain-api", optional = true }
indracore-node-core-provisioner = { path = "../core/provisioner", optional = true }
indracore-node-core-runtime-api = { path = "../core/runtime-api", optional = true }
indracore-pov-distribution = { path = "../network/pov-distribution", optional = true }
indracore-statement-distribution = { path = "../network/statement-distribution", optional = true }
indracore-approval-distribution = { path = "../network/approval-distribution", optional = true }
indracore-node-core-approval-voting = { path = "../core/approval-voting", optional = true }
indracore-gossip-support = { path = "../network/gossip-support", optional = true }

[dev-dependencies]
env_logger = "0.8.2"

[features]
default = ["db", "full-node"]
db = ["service/db"]
full-node = [
	"indracore-node-core-av-store",
	"indracore-node-core-approval-voting",
	"sc-finality-grandpa-warp-sync"
]

runtime-benchmarks = [
	"indracore-runtime/runtime-benchmarks",
	"kumandra-runtime/runtime-benchmarks"
]
try-runtime = [
	"indracore-runtime/try-runtime",
]

real-overseer = [
	"indracore-availability-bitfield-distribution",
	"indracore-availability-distribution",
	"indracore-availability-recovery",
	"indracore-collator-protocol",
	"indracore-gossip-support",
	"indracore-network-bridge",
	"indracore-node-collation-generation",
	"indracore-node-core-backing",
	"indracore-node-core-bitfield-signing",
	"indracore-node-core-candidate-selection",
	"indracore-node-core-candidate-validation",
	"indracore-node-core-chain-api",
	"indracore-node-core-provisioner",
	"indracore-node-core-runtime-api",
	"indracore-pov-distribution",
	"indracore-statement-distribution",
	"indracore-approval-distribution",
]
