[package]
name = "cumulus-primitives-parachain-inherent"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
# Substrate dependencies
sp-inherents = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }
sp-core = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }
sc-client-api = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", optional = true }
sp-runtime = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", optional = true }
sp-std = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }
sp-state-machine = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", optional = true }
sp-trie = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }
sp-api = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", optional = true }

# Cumulus dependencies
cumulus-primitives-core = { path = "../core", default-features = false }

# Other dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [ "derive" ] }
tracing = { version = "0.1.22", optional = true }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"cumulus-primitives-core/std",
	"sp-inherents/std",
	"sp-core/std",
	"sp-trie/std",
	"sp-std/std",
	"sp-state-machine",
	"tracing",
	"sp-runtime",
	"sc-client-api",
	"sp-api",
]
