[package]
name = "indracore-node-core-proposer"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
futures = "0.3.12"
futures-timer = "3.0.2"
tracing = "0.1.22"
indracore-node-subsystem = { path = "../../subsystem" }
indracore-overseer = { path = "../../overseer" }
indracore-primitives = { path = "../../../primitives" }
sc-basic-authorship = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-block-builder = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-client-api = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-api = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-blockchain = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-consensus = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-core = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-inherents = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-runtime = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-transaction-pool = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
