[package]
name = "cumulus-client-consensus-common"
description = "Cumulus specific common consensus implementations"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
# Substrate deps
sc-client-api = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-consensus = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-core = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-inherents = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-runtime = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-block-builder = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-blockchain = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-api = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-trie = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
substrate-prometheus-endpoint = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }

# Indracore deps
indracore-primitives = { path = "../../../../primitives" }
indracore-runtime = { path = "../../../../runtime/indracore" }

# Other deps
futures = { version = "0.3.8", features = ["compat"] }
tokio = "0.1.22"
codec = { package = "parity-scale-codec", version = "2.0.0", features = [ "derive" ] }
tracing = "0.1.22"
async-trait = "0.1.42"
dyn-clone = "1.0.4"

# [dev-dependencies]
# # Substrate deps
# sp-tracing = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }

# # Other deps
# futures-timer = "3.0.2"
